<resources>
    <string name="app_name">My Colors app</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="transparent">Transparent</string>
    <string name="semiTransparent">SemiTransparent</string>

</resources>
