<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/itemTransparent"
    android:title="@string/transparent"/>
    <item
        android:id="@+id/itemSemitransparent"
        android:title="@string/semiTransparent"/>
    <item
    android:id="@+id/itemBlue"
    android:title="@string/blue"/>
    <item
    android:id="@+id/itemRed"
    android:title="@string/red"/>
    <item
    android:id="@+id/itemGreen"
    android:title="@string/green"/>
    <item
    android:id="@+id/itemBrown"
    android:title="@string/brown"/>
    <item
    android:id="@+id/itemBlack"
    android:title="@string/black"/>
    <item
        android:id="@+id/itemPink"
        android:title="@string/pink"/>
    <item
        android:id="@+id/itemPurple"
        android:title="@string/purple"/>
    <item
        android:id="@+id/itemWhite"
        android:title="@string/white"/>
    <item
        android:id="@+id/itemGray"
        android:title="@string/gray"/>
</menu>